error/src/main/java/com/example/error/exception/ConflictException.kt
package com.example.error.exception

class ConflictException(e: Throwable) : RuntimeException(e)